New RecycleView EndlessScroll Scaling well

--- a/app/src/main/res/layout/page_typ1.xml
+++ b/app/src/main/res/layout/page_typ1.xml
@@ -3,10 +3,9 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.github.ksoichiro.android.observablescrollview.ObservableListView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </com.github.ksoichiro.android.observablescrollview.ObservableListView>
+        android:layout_height="match_parent"
+        android:id="@+id/list"
+        />
 </android.support.constraint.ConstraintLayout>
