--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textColor="@color/white"
-            android:text="lelq"/>
+            android:text="MemesApplication"/>
 
     </LinearLayout>
 
