--- a/app/src/main/res/layout/one_mem.xml
+++ b/app/src/main/res/layout/one_mem.xml
@@ -5,7 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv"
+        >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,6 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:id="@+id/picture"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             />
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
